--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,31 @@
 {
-    "name": "wayang/exception-spl",
-    "description": "The Wayang Exception Spl",
-    "type": "library",
-    "license": "Apache-2.0",
-    "require": {
-    	"php": "^7.1.3",
-        "wayang/exception": "^1.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Wayang\\Exception\\Spl\\": "src/Wayang/Exception/Spl"
-        }
+  "name": "wayang/exception-spl",
+  "description": "The Wayang Exception Spl",
+  "type": "library",
+  "license": "Apache-2.0",
+  "require": {
+    "php": ">=7.2.5",
+    "wayang/exception": "^1.0.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.5|^9.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Wayang\\Exception\\Spl\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "WayangTest\\Exception\\Spl\\": "test/src/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit -c test/phpunit.config.xml",
+    "coverage": "phpunit --coverage-text --coverage-clover=build/coverage/coverage-clover.xml -c test/phpunit.config.xml"
+  },
+  "config": {
+    "sort-packages": true,
+    "optimize-autoloader": true
+  }
 }
